--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.4.1",
+    "husky": "^7.0.4",
     "next": "12.0.3",
     "react": "17.0.2",
     "react-dom": "17.0.2"
@@ -19,13 +20,17 @@
     "@testing-library/react": "^12.1.2",
     "@types/node": "16.11.7",
     "@types/react": "17.0.34",
+    "@typescript-eslint/eslint-plugin": "^5.3.1",
     "autoprefixer": "^10.4.0",
     "babel-jest": "^27.3.1",
-    "eslint": "7.32.0",
+    "eslint": "^7.32.0",
     "eslint-config-next": "12.0.3",
+    "eslint-config-prettier": "^8.3.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.3.1",
+    "lint-staged": "^11.2.6",
     "postcss": "^8.3.11",
+    "prettier": "^2.4.1",
     "react-test-renderer": "^17.0.2",
     "tailwindcss": "^2.2.19",
     "typescript": "4.4.4"
