--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,13 +1,9 @@
 {
   "plugins": ["@typescript-eslint"],
   "extends": [
+    "next",
     "next/core-web-vitals",
-    "plugin:@typescript-eslint/recommended",
+    // "plugin:@typescript-eslint/recommended",
     "prettier"
-  ],
-  "rules": {
-    "prefer-const": "error",
-    "@typescript-eslint/no-unused-vars": "error",
-    "@typescript-eslint/no-explicit-any": "error"
-  }
+  ]
 }
