--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,13 +7,14 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
-    "incremental": true,
     "esModuleInterop": true,
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
+    "baseUrl": ".",
+    "incremental": true,
     "importHelpers": true
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
