--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "autoprefixer": "^10.4.0",
     "babel-jest": "^27.3.1",
     "babel-loader": "^8.2.3",
-    "contentlayer": "0.0.28",
+    "contentlayer": "^0.0.31",
+    "eslint": "<8.0.0",
     "eslint-config-next": "12.0.3",
     "eslint-config-prettier": "^8.3.0",
     "husky": "^7.0.4",
