--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build:content": "./node_modules/.bin/contentlayer build",
+    "build": "yarn build:content && next build",
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
