--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "next dev",
     "build:content": "./node_modules/.bin/contentlayer build",
-    "build": "yarn build:content && next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
