--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "build:content": "./node_modules/.bin/contentlayer build",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -14,7 +15,8 @@
   "dependencies": {
     "next": "12.0.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "reading-time": "^1.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
@@ -35,16 +37,23 @@
     "autoprefixer": "^10.4.0",
     "babel-jest": "^27.3.1",
     "babel-loader": "^8.2.3",
-    "eslint": "^8.2.0",
+    "contentlayer": "^0.0.31",
+    "eslint": "<8.0.0",
     "eslint-config-next": "12.0.3",
     "eslint-config-prettier": "^8.3.0",
     "husky": "^7.0.4",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.3.1",
     "lint-staged": "^11.2.6",
+    "next-contentlayer": "^0.0.31",
     "postcss": "^8.3.11",
     "prettier": "^2.4.1",
     "react-test-renderer": "^17.0.2",
+    "rehype-autolink-headings": "^6.1.0",
+    "rehype-code-titles": "^1.0.3",
+    "rehype-prism-plus": "^1.1.1",
+    "rehype-slug": "^5.0.0",
+    "remark-gfm": "^3.0.1",
     "storybook-addon-next-router": "^3.0.8",
     "tailwindcss": "^2.2.19",
     "typescript": "4.4.4"
