--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "rehype-prism-plus": "^1.1.1",
     "rehype-slug": "^5.0.0",
     "remark-gfm": "^3.0.1",
+    "slugify": "^1.6.2",
     "storybook-addon-next-router": "^3.0.8",
     "tailwindcss": "^2.2.19",
     "typescript": "4.4.4"
