update contentlayer dev version

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "next dev",
     "build:content": "./node_modules/.bin/contentlayer build",
-    "build": "yarn contentlayer build && next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
@@ -37,7 +37,7 @@
     "autoprefixer": "^10.4.0",
     "babel-jest": "^27.3.1",
     "babel-loader": "^8.2.3",
-    "contentlayer": "^0.0.31",
+    "contentlayer": "^0.0.32-dev.0",
     "eslint": "<8.0.0",
     "eslint-config-next": "12.0.3",
     "eslint-config-prettier": "^8.3.0",
@@ -45,7 +45,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.3.1",
     "lint-staged": "^11.2.6",
-    "next-contentlayer": "^0.0.31",
+    "next-contentlayer": "^0.0.32-dev.0",
     "postcss": "^8.3.11",
     "prettier": "^2.4.1",
     "react-test-renderer": "^17.0.2",
