update to react 18

--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
-    "next": "12.0.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "next": "12.0.4",
+    "react": "^18.0.0-beta-96ca8d915-20211115",
+    "react-dom": "^18.0.0-beta-96ca8d915-20211115",
     "reading-time": "^1.5.0"
   },
   "devDependencies": {
@@ -31,27 +31,27 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^12.1.2",
     "@types/node": "16.11.7",
-    "@types/react": "17.0.34",
+    "@types/react": "17.0.35",
     "@types/react-test-renderer": "^17.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.3.1",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
     "autoprefixer": "^10.4.0",
     "babel-jest": "^27.3.1",
     "babel-loader": "^8.2.3",
     "contentlayer": "^0.0.32",
     "eslint": "<8.0.0",
-    "eslint-config-next": "12.0.3",
+    "eslint-config-next": "12.0.4",
     "eslint-config-prettier": "^8.3.0",
     "husky": "^7.0.4",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.3.1",
-    "lint-staged": "^11.2.6",
+    "lint-staged": "^12.0.2",
     "next-contentlayer": "^0.0.32",
     "postcss": "^8.3.11",
     "prettier": "^2.4.1",
     "react-test-renderer": "^17.0.2",
     "rehype-autolink-headings": "^6.1.0",
     "rehype-code-titles": "^1.0.3",
-    "rehype-prism-plus": "^1.1.1",
+    "rehype-prism-plus": "^1.1.2",
     "rehype-slug": "^5.0.0",
     "remark-gfm": "^3.0.1",
     "slugify": "^1.6.2",
